# ENNA

./: JP0.json  README.md  pyproject.toml
ENNA/: pyproject.toml
ENNA/src/enna/: main.py
src/enna/: Menu.py  enna.txt  intro.py  main.py  opening.txt
src/enna/PlayerData/: Player.py
src/enna/Text/: animations.py
