[project]
name = "enna"
version = "0.1.0"
description = ""
authors = [
    {name = "fangorshile",email = "jp8shields@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "enna", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
